--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Menu</title>
+    <link href="code.css" ref="stylesheet">
+
 </head>
 
 <body>
@@ -12,11 +14,39 @@
     <h2>Entrée</h2>
     <ul>
         <li>
-            <a href="menu/entrée1">Entrée 1</a>
+            <a href="menu/entrée1.html">Entrée 1</a>
         </li>
         <li>Entrée 2</li>
         <li>Entrée 3</li>
     </ul>
+
+    <table>
+        <thead>
+            <tr>
+                <th colspan="2">Plat</th>
+            </tr>
+        </thead>
+        <tbody>
+            <th colspan="2">Plat</th>
+            <td>Prix</td>
+            </tr>
+            <tr>
+                <th>Steak frites</th>
+                <td>15</td>
+            </tr>
+            <tr>
+                <th>Plat</th>
+                <td>Prix</td>
+            </tr>
+            <tr>
+                <th colspan="2">Dessert</th>
+            </tr>
+            <tr>
+                <th>Mousse</th>
+                <td>5</td>
+            </tr>
+        </tbody>
+    </table>
 
     <h2>Plat</h2>
     <ul>
