--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li>
+                <a href="index.html" title="Acceuil">Acceuil</a>
+            </li>
+            <li>
+                <a href="menu.html" title="Menu">Menu</a>
+            </li>
+            <li>
+                <a href="contact.html" title="Contact">Menu</a>
+            </li>
+        </ul>
+    </nav>
 
     <h1> A Table </h1>
 
