--- a/menu.html
+++ b/menu.html
@@ -7,9 +7,42 @@
 
 </head>
 
+
 <body>
 
+    <a href="img/plat.jpg" target=" _blank">
+        <img src="img/plat.jpg " alt="Photo plat " width="auto" height="auto">
+    </a>
+
     <h1>menu</h1>
+
+
+    <table class="t2">
+        <tr>
+            <th>Image</th>
+            <th>Plat descrip</th>
+        </tr>
+        <tr>
+            <td>Joly</td>
+            <td>Pauline</td>
+        </tr>
+    </table>
+    <br>
+
+    <table class="t1 t2">
+        <tr>
+            <th>Nom</th>
+            <th>Prénom</th>
+        </tr>
+        <tr>
+            <td>Giraud</td>
+            <td>Pierre</td>
+        </tr>
+        <tr>
+            <td>Joly</td>
+            <td>Pauline</td>
+        </tr>
+    </table>
 
     <h2>Entrée</h2>
     <ul>
