--- a/index.html
+++ b/index.html
@@ -4,48 +4,70 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="code.css" ref="stylesheet">
     <title>Document</title>
+    <script type="text/javascript">
+        function refresh() {
+            var t = 1000; // rafraîchissement en millisecondes
+            setTimeout('showDate()', t)
+        }
+
+        function showDate() {
+            var date = new Date()
+            var h = date.getHours();
+            var m = date.getMinutes();
+            var s = date.getSeconds();
+            if (h < 10) {
+                h = '0' + h;
+            }
+            if (m < 10) {
+                m = '0' + m;
+            }
+            if (s < 10) {
+                s = '0' + s;
+            }
+            var time = h + ':' + m + ':' + s
+            document.getElementById('horloge').innerHTML = time;
+            refresh();
+        }
+    </script>
+    <link rel="stylesheet" media="screen" type="text/css" href="code.css" />
 </head>
 
-<body>
-    <nav>
-        <ul>
-            <li>
-                <a href="index.html" title="Acceuil">Acceuil</a>
-            </li>
-            <li>
-                <a href="menu.html" title="Menu">Menu</a>
-            </li>
-            <li>
-                <a href="contact.html" title="Contact">Menu</a>
-            </li>
-        </ul>
-    </nav>
+<body onload=showDate();>
+    <header>
+        <h1 class="title-big"> A Table </h1>
+        <span id='horloge' style="background-color:#1C1C1C;color:silver;font-size:40px;"></span>
+        <nav>
+            <a href="index.html" title="Acceuil">Acceuil</a>
+            <a href="menu.html" title="Menu">Menu</a>
+            <a href="contact.html" title="Contact">Contact</a>
+        </nav>
+    </header>
 
-    <h1> A Table </h1>
+    <article>
+        <art href="img/plat acceuil.jpg" target=" _blank">
+            <img src="img/plat acceuil.jpg " alt="Photo plat ">
+            </a>
 
-    <a href="img/plat acceuil.jpg" target=" _blank">
-        <img src="img/plat acceuil.jpg " alt="Photo plat " width="600 " height="200 ">
-    </a>
+            <p> Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
+                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
+            </p>
+            <h2>Historique</h2>
+            <p>
+                Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
+                conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
+            </p>
+            <h2>Cuisine</h2>
+            <p>
+                Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
+                conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
+            </p>
+    </article>
 
-    <p> Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita
-        sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-    </p>
-    <h2>Historique</h2>
-    <p>
-        Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
-        conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-    </p>
-    <h2>Cuisine</h2>
-    <p>
-        Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
-        conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-    </p>
+    <footer>
+        <address>37 rue de la liberté</address>
+    </footer>
 
-    <p>
-        <a href="menu.html ">Voir le menu</a>
-    </p>
 
 </body>
 
