--- a/index.html
+++ b/index.html
@@ -29,39 +29,37 @@
             document.getElementById('horloge').innerHTML = time;
             refresh();
         }
+
+        alert("Bienvenu");
     </script>
     <link rel="stylesheet" media="screen" type="text/css" href="code.css" />
 </head>
 
 <body onload=showDate();>
     <header>
+        <br>
         <h1 class="title-big"> A Table </h1>
         <span id='horloge' style="background-color:#1C1C1C;color:silver;font-size:40px;"></span>
         <nav>
-            <a href="index.html" title="Acceuil">Acceuil</a>
             <a href="menu.html" title="Menu">Menu</a>
             <a href="contact.html" title="Contact">Contact</a>
         </nav>
+        <br>
     </header>
-
+    <br>
+    <br>
     <article>
-        <art href="img/plat acceuil.jpg" target=" _blank">
-            <img src="img/plat acceuil.jpg " alt="Photo plat ">
-            </a>
 
-            <p> Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
-                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-            </p>
-            <h2>Historique</h2>
-            <p>
-                Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
-                conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-            </p>
-            <h2>Cuisine</h2>
-            <p>
-                Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
-                conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-            </p>
+        <h2 class="T2">Historique</h2>
+        <p>
+            Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
+            conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
+        </p>
+        <h2 class="T2">Cuisine</h2>
+        <p>
+            Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
+            conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
+        </p>
     </article>
 
     <footer>
