--- a/menu.html
+++ b/menu.html
@@ -1,96 +1,42 @@
 <html lang="en">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Menu</title>
-    <link href="code.css" ref="stylesheet">
+    <link rel="stylesheet" media="screen" type="text/css" href="code.css" />
 
 </head>
 
 
 <body>
 
-    <a href="img/plat.jpg" target=" _blank">
-        <img src="img/plat.jpg " alt="Photo plat " width="auto" height="auto">
-    </a>
+    <header>
+        <br>
+        <h1 class="title-big">MENU</h1>
+        <nav>
+            <a href="index.html" title="Acceuil">Acceuil</a>
+        </nav>
+        <br>
+    </header>
+    <br>
+    <br>
 
-    <h1>menu</h1>
-
+    <h2>Entrée</h2>
 
     <table class="t2">
         <tr>
-            <th>Image</th>
-            <th>Plat descrip</th>
+            <th>Salade de pâte</th>
+            <th>10€</th>
         </tr>
         <tr>
-            <td>Joly</td>
-            <td>Pauline</td>
+            <td class="img"><img src="img/plaat.jpg " alt="Photo plat "></td>
+            <td>Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
+                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.</th>
+            </td>
         </tr>
     </table>
-    <br>
-
-    <table class="t1 t2">
-        <tr>
-            <th>Nom</th>
-            <th>Prénom</th>
-        </tr>
-        <tr>
-            <td>Giraud</td>
-            <td>Pierre</td>
-        </tr>
-        <tr>
-            <td>Joly</td>
-            <td>Pauline</td>
-        </tr>
-    </table>
-
-    <h2>Entrée</h2>
-    <ul>
-        <li>
-            <a href="menu/entrée1.html">Entrée 1</a>
-        </li>
-        <li>Entrée 2</li>
-        <li>Entrée 3</li>
-    </ul>
-
-    <table>
-        <thead>
-            <tr>
-                <th colspan="2">Plat</th>
-            </tr>
-        </thead>
-        <tbody>
-            <th colspan="2">Plat</th>
-            <td>Prix</td>
-            </tr>
-            <tr>
-                <th>Steak frites</th>
-                <td>15</td>
-            </tr>
-            <tr>
-                <th>Plat</th>
-                <td>Prix</td>
-            </tr>
-            <tr>
-                <th colspan="2">Dessert</th>
-            </tr>
-            <tr>
-                <th>Mousse</th>
-                <td>5</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <h2>Plat</h2>
-    <ul>
-        <li>Plat 1</li>
-        <li>Plat 2</li>
-        <li>Plat 3</li>
-    </ul>
-
-    <p>
-        <a href="index.html">Acceuil</a>
-    </p>
 
 </body>
 
