--- a/menu.html
+++ b/menu.html
@@ -22,21 +22,23 @@
     </header>
     <br>
     <br>
+    <br>
+    <br>
+    <h2 class="T2">Entrée</h2>
 
-    <h2>Entrée</h2>
-
-    <table class="t2">
-        <tr>
-            <th>Salade de pâte</th>
-            <th>10€</th>
-        </tr>
-        <tr>
-            <td class="img"><img src="img/plaat.jpg " alt="Photo plat "></td>
-            <td>Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
-                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.</th>
-            </td>
-        </tr>
-    </table>
+    <div class="row">
+        <div class="col-md-6">
+            <h2 class="T2">Salade de pâtes</h2>
+            <p>
+                <img src="img/plaat.jpg " alt="Photo plat " class="img-responsive" class="img-fluid">
+            </p>
+        </div>
+        <div class="col-md-6">
+            <h2 class="T2">10€</h2>
+            <p>Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
+                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.</p>
+        </div>
+    </div>
 
 </body>
 
