--- a/index.html
+++ b/index.html
@@ -3,35 +3,9 @@
 <head>
     <meta charset='utf-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
-    <script type="text/javascript">
-        function refresh() {
-            var t = 1000; // rafraîchissement en millisecondes
-            setTimeout('showDate()', t)
-        }
-
-        function showDate() {
-            var date = new Date()
-            var h = date.getHours();
-            var m = date.getMinutes();
-            var s = date.getSeconds();
-            if (h < 10) {
-                h = '0' + h;
-            }
-            if (m < 10) {
-                m = '0' + m;
-            }
-            if (s < 10) {
-                s = '0' + s;
-            }
-            var time = h + ':' + m + ':' + s
-            document.getElementById('horloge').innerHTML = time;
-            refresh();
-        }
-
-        alert("Bienvenu");
-    </script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script type="text/javascript" src="java.js"></script>
     <link rel="stylesheet" media="screen" type="text/css" href="code.css" />
 </head>
 
@@ -48,23 +22,62 @@
     </header>
     <br>
     <br>
+
+
+
     <article>
+        <div class="row">
+            <div class="col-md-6">
+                <h2 class="T2">Historique</h2>
+                <p>
+                    Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
+                    conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
+                </p>
+            </div>
+            <div class="col-md-6">
+                <h2 class="T2">Cuisine</h2>
+                <p>
+                    Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
+                    conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
+                </p>
+            </div>
+        </div>
 
-        <h2 class="T2">Historique</h2>
-        <p>
-            Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
-            conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-        </p>
-        <h2 class="T2">Cuisine</h2>
-        <p>
-            Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
-            conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-        </p>
+
     </article>
-
+    <br>
+    <br>
+    <br>
     <footer>
-        <address>37 rue de la liberté</address>
+        <div class="row">
+
+            <div class="col-md-6">
+                <p align="center">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11051.533749619966!2d6.110902507812505!3d46.17297599999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c7b1b9646639b%3A0x966dd6ca54d93895!2sLa%20Mascotte%20RistoPizza!5e0!3m2!1sfr!2sfr!4v1652778169162!5m2!1sfr!2sfr "
+                        width="400 " height="300 " style="border:0; " allowfullscreen=" " loading="lazy " referrerpolicy="no-referrer-when-downgrade ">
+                    </iframe>
+                </p>
+            </div>
+            <div class="col-md-6">
+                <p class="center">
+                    <form action="/my-handling-form-page" method="post">
+                        <div>
+                            <label for="name">Nom&nbsp;:</label>
+                            <input type="text" id="name" name="user_name" />
+                            <div>
+                                <div>
+                                    <label for="mail">E-mail&nbsp;:</label>
+                                    <input type="email" id="mail" name="user_email" />
+                                </div>
+                                <div>
+                                    <label for="msg">Message :</label>
+                                    <textarea id="msg" name="user_message"></textarea>
+                                </div>
+                                <input type="submit" value="Poster   mon   commentaire" name="submit_commentaire" />
+                </p>
+                </div>
     </footer>
+
 
 
 </body>
