--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script type="text/javascript" src="java.js"></script>
+
     <link rel="stylesheet" media="screen" type="text/css" href="code.css" />
+    <script type="text/javascript" src="java.js"></script>
 </head>
 
 <body onload=showDate();>
@@ -23,25 +24,50 @@
     <br>
     <br>
 
+    <section>
+        <br>
+        <p class="p2">Bienvenu au restaurant "A Table"! Un restaurant en Suisse proposant une cuisine locale et traditionnel. En ouvrant le menu vous découvriez notre carte tandis que ci-dessous un aperçu de notre cuisine est à votre disposition.</p>
+    </section>
 
+    <br>
+    <br>
+    <form style="text-align: center; ">
+        <div class="container">
+            <div id="myCarousel" class="carousel slide border" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
 
-    <article>
-        <div class="row">
-            <div class="col-md-6">
-                <h2 class="T2">Historique</h2>
-                <p>
-                    Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
-                    conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-                </p>
-            </div>
-            <div class="col-md-6">
-                <h2 class="T2">Cuisine</h2>
-                <p>
-                    Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium inposita sunt
-                    conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.
-                </p>
+                        <img class="d-block w-100" src="img/1.jpg" alt="Panther">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/2.jpg" alt="Black Cat">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100" src="img/4.jpg" alt="Lion">
+                    </div>
+                </div>
             </div>
         </div>
+    </form>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">.</span>
+    </a>
+    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">.</span>
+    </a>
+
+    <br>
+    <br>
+
+    <section>
+        <p class="p2">Nous vous invitons à nous partager votre avis sur le restaurant à l'aide de l'espace commentaire. Si vous souhaitez partager l'adresse ou bien nous localiser plus facilement, une carte est mise à votre disposition.</p>
+    </section>
 
 
     </article>
@@ -49,33 +75,42 @@
     <br>
     <br>
     <footer>
-        <div class="row">
-
-            <div class="col-md-6">
-                <p align="center">
+        <div class=" row ">
+            <div class="col-md-6 ">
+                <p align="center ">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11051.533749619966!2d6.110902507812505!3d46.17297599999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478c7b1b9646639b%3A0x966dd6ca54d93895!2sLa%20Mascotte%20RistoPizza!5e0!3m2!1sfr!2sfr!4v1652778169162!5m2!1sfr!2sfr "
                         width="400 " height="300 " style="border:0; " allowfullscreen=" " loading="lazy " referrerpolicy="no-referrer-when-downgrade ">
                     </iframe>
                 </p>
             </div>
-            <div class="col-md-6">
-                <p class="center">
-                    <form action="/my-handling-form-page" method="post">
-                        <div>
-                            <label for="name">Nom&nbsp;:</label>
-                            <input type="text" id="name" name="user_name" />
+            <div class="col-md-6 ">
+                <form style="text-align: center; ">
+                    <p class="center ">
+                        <form action="/my-handling-form-page " method="post ">
                             <div>
+                                <label for="name ">Nom&nbsp;:</label>
+                                <input type="text " id="name " name="user_name " />
                                 <div>
-                                    <label for="mail">E-mail&nbsp;:</label>
-                                    <input type="email" id="mail" name="user_email" />
+                                    <div>
+                                        <label for="mail ">E-mail&nbsp;:</label>
+                                        <input type="email " id="mail " name="user_email " />
+                                    </div>
+                                    <div>
+                                        <label for="msg ">Message :</label>
+                                        <textarea id="msg " name="user_message "></textarea>
+                                    </div>
+                                    <input type="submit " value="Poster mon commentaire " name="submit_commentaire " />
                                 </div>
-                                <div>
-                                    <label for="msg">Message :</label>
-                                    <textarea id="msg" name="user_message"></textarea>
-                                </div>
-                                <input type="submit" value="Poster   mon   commentaire" name="submit_commentaire" />
-                </p>
-                </div>
+                            </div>
+                        </form>
+                    </p>
+                </form>
+            </div>
+        </div>
+
+
+
+
     </footer>
 
 
