--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Menu</title>
+    <script type="text/javascript" src="java.js"></script>
     <link rel="stylesheet" media="screen" type="text/css" href="code.css" />
 
 </head>
@@ -14,28 +15,113 @@
 
     <header>
         <br>
-        <h1 class="title-big">MENU</h1>
+        <h1 class="title-big ">MENU</h1>
         <nav>
-            <a href="index.html" title="Acceuil">Acceuil</a>
+            <a href="index.html " title="Acceuil ">Acceuil</a>
         </nav>
         <br>
     </header>
     <br>
     <br>
-    <br>
-    <br>
-    <h2 class="T2">Entrée</h2>
 
-    <div class="row">
-        <div class="col-md-6">
-            <h2 class="T2">Salade de pâtes</h2>
+
+    <br>
+    <br>
+    <h2 class=" T2 ">Entrée</h2>
+    <br>
+    <div class="row ">
+        <div class="col-md-6 ">
+            <h2 class="T2 ">Salade de pâtes</h2>
             <p>
-                <img src="img/plaat.jpg " alt="Photo plat " class="img-responsive" class="img-fluid">
+                <img src="img/plaat.jpg " alt="Photo plat " class="img-responsive " class="img-fluid ">
             </p>
         </div>
-        <div class="col-md-6">
-            <h2 class="T2">10€</h2>
-            <p>Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
+        <div class="col-md-6 ">
+            <h2 class="T2 ">10€</h2>
+            <p class="center">Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
+                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.</p>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row ">
+        <div class="col-md-6 ">
+            <h2 class="T2 ">Salade composée</h2>
+            <p>
+                <img src="img/plat.jpg " alt="Photo plat " class="img-responsive " class="img-fluid ">
+            </p>
+        </div>
+        <div class="col-md-6 ">
+            <h2 class="T2 ">12€</h2>
+            <p class="center"> Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
+                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.</p>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2 class=" T2 ">Plat</h2>
+    <br>
+    <div class="row ">
+        <div class="col-md-6 ">
+            <h2 class="T2 ">Poulet</h2>
+            <p>
+                <img src="img/poulet.jpg " alt="Photo plat " class="img-responsive " class="img-fluid ">
+            </p>
+        </div>
+        <div class="col-md-6 ">
+            <h2 class="T2 ">14€</h2>
+            <p class="center">Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
+                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.</p>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row ">
+        <div class="col-md-6 ">
+            <h2 class="T2 ">Riz</h2>
+            <p>
+                <img src="img/riz.jpg " alt="Photo plat " class="img-responsive " class="img-fluid ">
+            </p>
+        </div>
+        <div class="col-md-6 ">
+            <h2 class="T2 ">13€</h2>
+            <p class="center"> Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
+                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.</p>
+        </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h2 class=" T2 ">Dessert</h2>
+    <br>
+    <div class="row ">
+        <div class="col-md-6 ">
+            <h2 class="T2 ">Clafoutis</h2>
+            <p>
+                <img src="img/souffler.jpg " alt="Photo plat " class="img-responsive " class="img-fluid ">
+            </p>
+        </div>
+        <div class="col-md-6 ">
+            <h2 class="T2 ">14€</h2>
+            <p class="center">Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
+                inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.</p>
+        </div>
+    </div>
+    <br>
+    <br>
+    <div class="row ">
+        <div class="col-md-6 ">
+            <h2 class="T2 ">Moelleux</h2>
+            <p>
+                <img src="img/coulant.jpg " alt="Photo plat " class="img-responsive " class="img-fluid ">
+            </p>
+        </div>
+        <div class="col-md-6 ">
+            <h2 class="T2 ">13€</h2>
+            <p class="center"> Abusus enim multitudine hominum, quam tranquillis in rebus diutius rexit, ex agrestibus habitaculis urbes construxit multis opibus firmas et viribus, quarum ad praesens pleraeque licet Graecis nominibus appellentur, quae isdem ad arbitrium
                 inposita sunt conditoris, primigenia tamen nomina non amittunt, quae eis Assyria lingua institutores veteres indiderunt.</p>
         </div>
     </div>
